--- a/src/app/layout/backend/backend.component.html
+++ b/src/app/layout/backend/backend.component.html
@@ -1,3 +1,110 @@
-<p>
-  backend works!
-</p>
+<div id="main">
+
+    <!-- TOOLBAR: Above -->
+    <ng-container *ngIf="kdevConfig.layout.toolbar.position === 'above'">
+        <ng-container *ngTemplateOutlet="toolbar"></ng-container>
+    </ng-container>
+    <!-- / TOOLBAR: Above -->
+
+    <div id="container-1" class="container">
+
+        <!-- NAVBAR: Left -->
+        <ng-container *ngIf="kdevConfig.layout.navbar.position === 'left'">
+            <ng-container *ngTemplateOutlet="leftNavbar"></ng-container>
+        </ng-container>
+        <!-- / NAVBAR: Left -->
+
+        <div id="container-2" class="container">
+
+            <!-- TOOLBAR: Below fixed -->
+            <ng-container *ngIf="kdevConfig.layout.toolbar.position === 'below-fixed'">
+                <ng-container *ngTemplateOutlet="toolbar"></ng-container>
+            </ng-container>
+            <!-- / TOOLBAR: Below fixed -->
+
+            <div id="container-3" class="container" kdevPerfectScrollbar
+                 [kdevPerfectScrollbarOptions]="{suppressScrollX: true, updateOnRouteChange : true}">
+
+                <!-- TOOLBAR: Below static -->
+                <ng-container *ngIf="kdevConfig.layout.toolbar.position === 'below-static'">
+                    <ng-container *ngTemplateOutlet="toolbar"></ng-container>
+                </ng-container>
+                <!-- / TOOLBAR: Below static -->
+
+                <!-- CONTENT -->
+                <content></content>
+                <!-- / CONTENT -->
+
+                <!-- FOOTER: Below static -->
+                <ng-container *ngIf="kdevConfig.layout.footer.position === 'below-static'">
+                    <ng-container *ngTemplateOutlet="footer"></ng-container>
+                </ng-container>
+                <!-- / FOOTER: Below static -->
+
+            </div>
+
+            <!-- FOOTER: Below fixed -->
+            <ng-container *ngIf="kdevConfig.layout.footer.position === 'below-fixed'">
+                <ng-container *ngTemplateOutlet="footer"></ng-container>
+            </ng-container>
+            <!-- / FOOTER: Below fixed -->
+
+        </div>
+
+        <!-- NAVBAR: Right -->
+        <ng-container *ngIf="kdevConfig.layout.navbar.position === 'right'">
+            <ng-container *ngTemplateOutlet="rightNavbar"></ng-container>
+        </ng-container>
+        <!-- / NAVBAR: Right -->
+
+    </div>
+
+    <!-- FOOTER: Above -->
+    <ng-container *ngIf="kdevConfig.layout.footer.position === 'above'">
+        <ng-container *ngTemplateOutlet="footer"></ng-container>
+    </ng-container>
+    <!-- FOOTER: Above -->
+
+</div>
+
+<!-- ----------------------------------------------------------------------------------------------------- -->
+<!-- @ PARTIALS -->
+<!-- ----------------------------------------------------------------------------------------------------- -->
+
+<!-- TOOLBAR -->
+<ng-template #toolbar>
+    <toolbar *ngIf="!kdevConfig.layout.toolbar.hidden"
+             [ngClass]="kdevConfig.layout.toolbar.customBackgroundColor === true ? kdevConfig.layout.toolbar.position + ' ' + kdevConfig.layout.toolbar.background : kdevConfig.layout.toolbar.position">
+    </toolbar>
+</ng-template>
+<!-- / TOOLBAR -->
+
+<!-- FOOTER -->
+<ng-template #footer>
+    <footer *ngIf="!kdevConfig.layout.footer.hidden"
+            [ngClass]="kdevConfig.layout.footer.customBackgroundColor === true ? kdevConfig.layout.footer.position + ' ' + kdevConfig.layout.footer.background : kdevConfig.layout.footer.position">
+    </footer>
+</ng-template>
+<!-- / FOOTER -->
+
+<!-- LEFT NAVBAR -->
+<ng-template #leftNavbar>
+    <kdev-sidebar name="navbar" class="navbar-kdev-sidebar"
+                  [folded]="kdevConfig.layout.navbar.folded"
+                  lockedOpen="gt-md"
+                  *ngIf="!kdevConfig.layout.navbar.hidden">
+        <navbar [variant]="kdevConfig.layout.navbar.variant" class="left-navbar"></navbar>
+    </kdev-sidebar>
+</ng-template>
+<!-- / LEFT NAVBAR -->
+
+<!-- RIGHT NAVBAR -->
+<ng-template #rightNavbar>
+    <kdev-sidebar name="navbar" position="right" class="navbar-kdev-sidebar"
+                  [folded]="kdevConfig.layout.navbar.folded"
+                  lockedOpen="gt-md"
+                  *ngIf="!kdevConfig.layout.navbar.hidden">
+        <navbar [variant]="kdevConfig.layout.navbar.variant" class="right-navbar"></navbar>
+    </kdev-sidebar>
+</ng-template>
+<!-- / RIGHT NAVBAR -->
