--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar>
 
-    <div fxLayout="row" fxLayoutAlign="start center" fxLayoutAlign.gt-xs="end center" fxFlex>
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutAlign.gt-xs="end center" fxFlex>
 
-        <div fxLayout="row" fxLayoutAlign="start" fxHide fxShow.gt-xs>
-            <span class="font-size-16 mr-16">Created by KDev August 1th 2018 </span>
+        <div fxLayout="row" fxLayoutAlign="center" fxAlignItem>
+            <span class="font-size-14 mr-16">Created by KDev August 1th 2018 </span>
         </div>
 
     </div>
