--- a/src/app/layout/components/navbar/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/style-1/style-1.component.html
@@ -1,17 +1,16 @@
 <div class="navbar-top" [ngClass]="kdevConfig.layout.navbar.secondaryBackground">
 
     <div class="logo">
-        <img class="logo-icon" src="assets/images/logos/kdev.svg">
-        <span class="logo-text secondary-text">KDEV</span>
+        <img class="logo-icon" src="assets/images/logos/kdev.png">
     </div>
 
     <div class="buttons">
 
-        <button mat-icon-button class="toggle-sidebar-folded" (click)="toggleSidebarFolded()" fxHide.lt-lg>
+        <button mat-icon-button class="toggle-sidebar-folded" (click)="toggleSidebarFolded()" fxHide.lt-md>
             <mat-icon class="secondary-text">menu</mat-icon>
         </button>
 
-        <button mat-icon-button class="toggle-sidebar-opened" (click)="toggleSidebarOpened()" fxHide.gt-md>
+        <button mat-icon-button class="toggle-sidebar-opened" (click)="toggleSidebarOpened()" fxHide.gt-sm>
             <mat-icon class="secondary-text">arrow_back</mat-icon>
         </button>
 
@@ -25,8 +24,8 @@
 
     <div class="user" fxLayout="column" [ngClass]="kdevConfig.layout.navbar.secondaryBackground">
 
-        <div class="h3 username">Charlie Adams</div>
-        <div class="h5 email hint-text mt-8">adams.charlie@mail.com</div>
+        <div class="h3 username">K Developer</div>
+        <div class="h5 email hint-text mt-8">kdev.software1110@mail.com</div>
         <div class="avatar-container" [ngClass]="kdevConfig.layout.navbar.primaryBackground">
             <img class="avatar" src="assets/images/avatars/kdev.png">
         </div>
