--- a/src/app/layout/components/navbar/style-1/style-1.component.scss
+++ b/src/app/layout/components/navbar/style-1/style-1.component.scss
@@ -4,7 +4,7 @@ kdev-sidebar {
     overflow: hidden;
     &.folded:not(.unfolded) {
       navbar {
-        navbar-vertical-style-1 {
+        navbar-style-1 {
           .navbar-top {
             padding: 12px 0;
             justify-content: center;
@@ -13,8 +13,7 @@ kdev-sidebar {
             }
             .logo {
               .logo-icon {
-                width: 32px;
-                height: 32px;
+                height: 16px;
               }
               .logo-text {
                 display: none;
@@ -63,7 +62,7 @@ kdev-sidebar {
 }
 
 navbar {
-  &.vertical-style-1 {
+  &.style-1 {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
@@ -77,7 +76,7 @@ navbar {
       }
     }
   }
-  navbar-vertical-style-1 {
+  navbar-style-1 {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -101,7 +100,6 @@ navbar {
         display: flex;
         align-items: center;
         .logo-icon {
-          width: 24px;
           height: 24px;
         }
         .logo-text {
