--- a/src/app/layout/components/navbar/style-2/style-2.component.scss
+++ b/src/app/layout/components/navbar/style-2/style-2.component.scss
@@ -4,7 +4,7 @@ kdev-sidebar {
     overflow: hidden;
     &.folded:not(.unfolded) {
       navbar {
-        navbar-vertical-style-2 {
+        navbar-style-2 {
           .navbar-header {
             padding: 0 13px;
             .logo {
@@ -32,7 +32,7 @@ kdev-sidebar {
 }
 
 navbar {
-  &.vertical-style-2 {
+  &.style-2 {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
@@ -46,7 +46,7 @@ navbar {
       }
     }
   }
-  navbar-vertical-style-2 {
+  navbar-style-2 {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -64,8 +64,7 @@ navbar {
         display: flex;
         align-items: center;
         .logo-icon {
-          width: 38px;
-          height: 38px;
+          height: 32px;
         }
         .logo-text {
           margin-left: 8px;
