--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -24,7 +24,7 @@
 
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
 
-                <button mat-menu-item>
+                <button mat-menu-item [routerLink]="'backend/profile'">
                     <mat-icon>account_circle</mat-icon>
                     <span>My Profile</span>
                 </button>
