--- a/src/app/layout/backend/backend.component.html
+++ b/src/app/layout/backend/backend.component.html
@@ -66,7 +66,8 @@
 
 <!-- TOOLBAR -->
 <ng-template #toolbar>
-    <toolbar *ngIf="!kdevConfig.layout.toolbar.hidden" [ngClass]="kdevConfig.layout.toolbar.customBackgroundColor === true ? kdevConfig.layout.toolbar.position + ' ' + kdevConfig.layout.toolbar.background : kdevConfig.layout.toolbar.position">
+    <toolbar *ngIf="!kdevConfig.layout.toolbar.hidden" [ngClass]="kdevConfig.layout.toolbar.customBackgroundColor === true ? kdevConfig.layout.toolbar.position + ' ' + kdevConfig.layout.toolbar.background : kdevConfig.layout.toolbar.position"
+        [layout]="kdevConfig.layout.style">
     </toolbar>
 </ng-template>
 <!-- / TOOLBAR -->
