--- a/src/app/layout/components/toolbar/frontend/frontend-toolbar.component.html
+++ b/src/app/layout/components/toolbar/frontend/frontend-toolbar.component.html
@@ -1,40 +1,40 @@
-<mat-toolbar class="p-0 mat-elevation-z1">
+<mat-toolbar class="pl-32 pr-32 mat-elevation-z1">
 
     <div fxFlex fxFill fxLayout="row" fxLayoutAlign="start center">
 
         <div fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
 
-            <button mat-icon-button class="navbar-toggle-button"
-                    *ngIf="!hiddenNavbar" (click)="toggleSidebarOpen('navbar')" fxHide.gt-sm>
-                <mat-icon class="secondary-text">menu</mat-icon>
-            </button>
+            <div fxLayout="row" fxLayoutAlign="start center">
+                <div class="logo ml-16">
+                    <img class="logo-icon" src="assets/images/logos/kdev.png">
+                </div>
+            </div>
 
         </div>
 
         <div class="" fxFlex="0 1 auto" fxLayout="row" fxLayoutAlign="start center">
 
-            <button mat-button [matMenuTriggerFor]="userMenu"
-                    class="user-button">
-                <div fxLayout="row" fxLayoutAlign="center center">
-                    <img class="avatar mr-8 mr-sm-16" src="assets/images/avatars/kdev.png">
-                    <span class="username mr-12" fxHide fxShow.gt-sm>K Developer</span>
-                    <mat-icon class="s-16">keyboard_arrow_down</mat-icon>
-                </div>
+            <div fxFlex fxHide fxShow.gt-sm>
+                <button mat-button class="ml-8" [routerLink]="'frontend/page-1'">
+                    <span class="secondary-text font-size-16 mx-4">Page 1</span>
+                </button>
+
+                <button mat-button class="ml-8" [routerLink]="'frontend/page-2'">
+                    <span class="secondary-text font-size-16 mx-4">Page 2</span>
+                </button>
+
+                <button mat-button class="ml-8" [routerLink]="'frontend/page-3'">
+                    <span class="secondary-text font-size-16 mx-4">Page 3</span>
+                </button>
+
+                <button mat-button class="ml-8 login-button" [routerLink]="'frontend/login'">
+                    <span class="font-size-16 mx-4">Log in / Sign up</span>
+                </button>
+            </div>
+
+            <button mat-icon-button class="navbar-toggle-button" fxHide.gt-sm>
+                <mat-icon class="secondary-text">menu</mat-icon>
             </button>
-
-            <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
-
-                <button mat-menu-item [routerLink]="'backend/profile'">
-                    <mat-icon>account_circle</mat-icon>
-                    <span>My Profile</span>
-                </button>
-                
-                <button mat-menu-item class="">
-                    <mat-icon>exit_to_app</mat-icon>
-                    <span>Logout</span>
-                </button>
-
-            </mat-menu>
 
         </div>
 
