--- a/src/app/layout/components/toolbar/frontend/frontend-toolbar.component.html
+++ b/src/app/layout/components/toolbar/frontend/frontend-toolbar.component.html
@@ -6,7 +6,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start center">
                 <a [routerLink]="'frontend'">
-                    <div class="logo ml-16">
+                    <div class="logo">
                         <img class="logo-icon" src="assets/images/logos/kdev.png">
                     </div>
                 </a>
