--- a/src/app/layout/components/toolbar/frontend/frontend-toolbar.component.scss
+++ b/src/app/layout/components/toolbar/frontend/frontend-toolbar.component.scss
@@ -12,13 +12,29 @@ frontend-toolbar {
     background: inherit !important;
     color: inherit !important;
     height: 84px;
+
+    @include media-breakpoint('sm') {
+      height: 64px;
+    }
+
+    @include media-breakpoint('xs') {
+      height: 56px;
+    }
   }
   .logo {
     display: flex;
     align-items: center;
     .logo-icon {
       height: 36px;
-      filter: drop-shadow(0px 3px 6px rgba(255, 255, 255, 0.6))
+      filter: drop-shadow(0px 3px 6px rgba(255, 255, 255, 0.6));
+
+      @include media-breakpoint('sm') {
+        height: 32px;
+      }
+
+      @include media-breakpoint('xs') {
+        height: 28px;
+      }
     }
   }
   .login-button {
@@ -26,8 +42,9 @@ frontend-toolbar {
     border-radius: 50px;
   }
   .navbar-toggle-button {
-    min-width: 56px;
-    height: 56px;
+    min-width: 44px;
+    height: 44px;
+    margin-right: -16px;
   }
   .toolbar-separator {
     height: 64px;
