--- a/src/app/layout/components/toolbar/frontend/frontend-toolbar.component.html
+++ b/src/app/layout/components/toolbar/frontend/frontend-toolbar.component.html
@@ -32,7 +32,7 @@
                     <span class="secondary-text font-size-16 mx-4">Page 3</span>
                 </button>
 
-                <button mat-button class="ml-8 login-button" [routerLink]="'frontend/login'">
+                <button mat-raised-button color="accent" class="ml-8 login-button" [routerLink]="'frontend/login'">
                     <span class="font-size-16 mx-4">Log in / Sign up</span>
                 </button>
             </div>
