--- a/src/app/pages/frontend-pages/home/home.component.html
+++ b/src/app/pages/frontend-pages/home/home.component.html
@@ -1,3 +1,73 @@
-<p>
-  home works!
-</p>
+<div class="page-layout carded fullwidth">
+
+  <div class="top-bg accent"></div>
+
+  <div class="center">
+
+    <div class="header accent p-24" fxLayout="row" fxLayoutAlign="center center">
+      <h1 class="m-0 font-size-32">Welcome to this boilerplate!</h1>
+    </div>
+
+    <div class="content-card">
+
+      <div class="toolbar px-24 py-8">
+        <span class="font-size-20 font-weight-600">Installation</span>
+      </div>
+
+      <div class="content p-24">
+
+        <h3 class="font-size-20 accent-A700-fg">Prerequisites</h3>
+        <div class="mt-24">
+          <kdev-highlight lang="bash" class="source-code" fxFlex="100%">
+            <textarea #source hidden="hidden">
+              $ node -v
+              v10.14.2
+
+              $ npm -v
+              6.5.0
+
+              $ ng --version
+              Angular CLI: 7.0.6
+              Node: 10.14.2
+              OS: darwin x64
+              Angular: 7.0.4
+              ...
+            </textarea>
+          </kdev-highlight>
+        </div>
+
+        <h3 class="font-size-20 accent-A700-fg mt-48">Local environment</h3>
+        <div class="mt-24">
+          <kdev-highlight lang="bash" class="source-code" fxFlex="100%">
+            <textarea #source hidden="hidden">
+              $ git clone https://github.com/kdevsoftware/kdev-ng7-boilerplate.git
+
+              $ cd kdev-ng7-boilerplate.git
+
+              $ npm install
+
+              $ npm start
+            </textarea>
+          </kdev-highlight>
+        </div>
+        <p class="font-size-16 primary-A700-fg">Finally, navigate to <span class="accent-A700-fg">http://localhost:4200</span></p>
+
+        <h3 class="font-size-20 accent-A700-fg mt-100 mb-0">Screenshots</h3>
+
+        <p class="mt-20 mb-0 secondary-text">
+          <em>http://localhost:4200/frontend</em>
+        </p>
+        <img class="mt-8 w-100-p" src="assets/images/contents/frontend.png" style="max-width: 1024px; box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);">
+
+        <p class="mt-60 mb-0 secondary-text">
+          <em>http://localhost:4200/frontend</em>
+        </p>
+        <img class="mt-8 w-100-p" src="assets/images/contents/frontend.png" style="max-width: 1024px; box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);">
+        
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
