--- a/src/app/layout/components/toolbar/backend/backend-toolbar.component.html
+++ b/src/app/layout/components/toolbar/backend/backend-toolbar.component.html
@@ -24,12 +24,12 @@
 
             <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
 
-                <button mat-menu-item [routerLink]="'backend/profile'">
+                <button mat-menu-item [routerLink]="'/backend/profile'">
                     <mat-icon>account_circle</mat-icon>
                     <span>My Profile</span>
                 </button>
                 
-                <button mat-menu-item class="">
+                <button mat-menu-item [routerLink]="'/frontend'">
                     <mat-icon>exit_to_app</mat-icon>
                     <span>Logout</span>
                 </button>
