--- a/src/app/pages/frontend-pages/login/login.component.html
+++ b/src/app/pages/frontend-pages/login/login.component.html
@@ -19,7 +19,7 @@
 
         <mat-form-field class="mb-16">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email" value="test@kdevsoftware.com">
+          <input matInput formControlName="email">
           <mat-icon matSuffix class="secondary-text">mail</mat-icon>
           <mat-error *ngIf="loginForm.get('email').hasError('required')">
             Email is required
@@ -32,7 +32,7 @@
 
         <mat-form-field>
           <mat-label>Password</mat-label>
-          <input matInput type="password" formControlName="password" value="123456">
+          <input matInput type="password" formControlName="password">
           <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
           <mat-error>
             Password is required
