--- a/src/app/layout/components/navbar/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/style-1/style-1.component.html
@@ -1,8 +1,10 @@
 <div class="navbar-top" [ngClass]="kdevConfig.layout.navbar.secondaryBackground">
 
-    <div class="logo">
-        <img class="logo-icon" src="assets/images/logos/kdev.png">
-    </div>
+    <a href="/">
+        <div class="logo">
+            <img class="logo-icon" src="assets/images/logos/kdev.png">
+        </div>
+    </a>
 
     <div class="buttons">
 
