--- a/src/app/layout/components/navbar/style-2/style-2.component.html
+++ b/src/app/layout/components/navbar/style-2/style-2.component.html
@@ -1,8 +1,11 @@
 <div class="navbar-header" [ngClass]="kdevConfig.layout.navbar.secondaryBackground">
 
-    <div class="logo">
-        <img class="logo-icon" src="assets/images/logos/kdev.png">
-    </div>
+    <a href="/">
+        <div class="logo">
+            <img class="logo-icon" src="assets/images/logos/kdev.png">
+        </div>
+
+    </a>
 
     <button mat-icon-button class="toggle-sidebar-folded" (click)="toggleSidebarFolded()" fxHide.lt-md>
         <mat-icon>menu</mat-icon>
